--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+# DATASOURCE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:medicine
+spring.datasource.username=admin
+spring.datasource.password=123
 
+# JPA
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.show_sql= true
+spring.jpa.properties.hibernate.format_sql= true
+
+# H2
+spring.h2.console.path=/h2
+spring.h2.console.enabled=true
+
+# THYMELEAF
+spring.thymeleaf.cache= false
