--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
   <groupId>com.healthcare</groupId>
   <artifactId>request-donate-medicine</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <packaging>war</packaging>
   <name>request-donate-medicine</name>
   <description>Healthcare Web Application with Spring Boot</description>
   <properties>
@@ -77,7 +78,6 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
-        <version>${project.parent.version}</version>
         <configuration>
           <excludes>
             <exclude>
